fix: fix spacing errors

--- a/styles/components/basket/Basket.scss
+++ b/styles/components/basket/Basket.scss
@@ -4,6 +4,7 @@
   border-radius: 4px;
   border: 8.18px solid $primary;
   padding: 26.57px 22px;
+  margin-top: 30px;
 }
 
 .basket-price {
